# __template_project__

./: README.md  pyproject.toml
src/_template_project_/models/: database.sql
src/_template_project_/services/fetchers/: aldi_scrap.py
