[project]
name = "_template_project_"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marcel Deutzer", email = "mdeutzer@web.de"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
